--- a/hw/project/project.html
+++ b/hw/project/project.html
@@ -1244,12 +1244,12 @@ States (“Drug Overdose Death Statistics [2023]”). The patterns of drug
 consumption across different age groups can help us better understand
 the context behind these numbers, which could further guide prevention
 and intervention efforts. This analysis explores the differences in
-regular alcohol consumption across age groups and what their trends
-are.By exploring these, we aim to identify which age groups should
-heavily be focused on when considering alcohol consumption. Ultimately,
-this analysis finds that the most consumed drugs were caffeine,
-chocolate (which can cause abnormal behaviors and other sensations that
-can be considered an addictive substance [“Chocolate: Food or Drug? -
+regular alcohol consumption across age groups and what their trends are.
+By exploring these, we aim to identify which age groups should heavily
+be focused on when considering alcohol consumption. Ultimately, this
+analysis finds that the most consumed drugs were caffeine, chocolate
+(which can cause abnormal behaviors and other sensations that can be
+considered an addictive substance [“Chocolate: Food or Drug? -
 University of Arizona”]), and alcohol among individuals aged 18-24.
 Overall drug consumption decreases significantly with increased age.</p>
 </div>
