--- a/hw/project/project.html
+++ b/hw/project/project.html
@@ -1205,8 +1205,8 @@ margin-left: 0 !important;
       <li><a href="#introduction" id="toc-introduction">Introduction</a></li>
       <li><a href="#background" id="toc-background">Background</a>
       <ul>
-      <li><a href="#age-and-drug-use-datadrug_consumption.csv" id="toc-age-and-drug-use-datadrug_consumption.csv">Age and Drug
-      Use Data(Drug_consumption.csv)</a></li>
+      <li><a href="#age-and-drug-use-data-httpsdoi.org10.24432c5tc7s" id="toc-age-and-drug-use-data-httpsdoi.org10.24432c5tc7s">Age and
+      Drug Use Data (https://doi.org/10.24432/C5TC7S)</a></li>
       <li><a href="#combined-data" id="toc-combined-data">Combined
       Data</a></li>
       </ul></li>
@@ -1263,21 +1263,21 @@ age as the data is further analyzed.</p>
 being consumed by each age group from age 18 to 65 and up. The age
 groups consist of 18-24, 24-35, 35-44, 45-54, 55-64 and 65+. Our data
 set consists of data from one source that had this information.</p>
-<div id="age-and-drug-use-datadrug_consumption.csv" class="section level2">
-<h2>Age and Drug Use Data(Drug_consumption.csv)</h2>
+<div id="age-and-drug-use-data-httpsdoi.org10.24432c5tc7s" class="section level2">
+<h2>Age and Drug Use Data (<a href="https://doi.org/10.24432/C5TC7S" class="uri">https://doi.org/10.24432/C5TC7S</a>)</h2>
 <p>Our data came from a Drug consumption dataset (Fehrman, Egan, and
-Mirkes 2015). This dataset had information on many different
-demographics and their consumption of various drug types, some legal and
-some illegal. The raw data contains many columns and almost 2000 rows
-(individuals); however for this study we only used columns that
-corresponded to age group (Age) and alcohol consumption (Alcohol). The
-Age column quantified the ages of all individuals so that each row or
-individual had a value across a broad range between -0.95 and 2.59, that
-would put them in a certain age group. For example the value -0.95197
-puts that individual into the age group 18-24 where 1.09449 puts them
-into 45-59. The Alcohol column placed each individual into one of 7
-classes based on the frequency of their consumption. The classes
-included:</p>
+Mirkes 2015, <a href="https://doi.org/10.24432/C5TC7S" class="uri">https://doi.org/10.24432/C5TC7S</a>). This dataset had
+information on many different demographics and their consumption of
+various drug types, some legal and some illegal. The raw data contains
+many columns and almost 2000 rows (individuals); however for this study
+we only used columns that corresponded to age group (Age) and alcohol
+consumption (Alcohol). The Age column quantified the ages of all
+individuals so that each row or individual had a value across a broad
+range between -0.95 and 2.59, that would put them in a certain age
+group. For example the value -0.95197 puts that individual into the age
+group 18-24 where 1.09449 puts them into 45-59. The Alcohol column
+placed each individual into one of 7 classes based on the frequency of
+their consumption. The classes included:</p>
 <ul>
 <li><p>CLO: never used</p></li>
 <li><p>CL1: used over a decade ago</p></li>
@@ -1298,7 +1298,7 @@ groups.</p>
 <blockquote>
 <p>The bar graph here shows the different proportions of drug
 consumption across all age groups. What’s seen throughout is that
-chocolate, caffiene, and alcohol are constantly high across all age
+chocolate, caffeine, and alcohol are constantly high across all age
 groups.</p>
 </blockquote>
 </div>
