--- a/hw/project/project.html
+++ b/hw/project/project.html
@@ -1347,7 +1347,7 @@ non-regular drinker.</p></li>
 <li><p>N: The number of cases is predetermined.</p></li>
 <li><p>S: The probability for each case remains the same.</p></li>
 </ul>
-<p>The assumption of independence is could be potentially not met since
+<p>The assumption of independence could potentially not be met since
 drinking tends to be a social activity, thus one regular drinker could
 affect another person.</p>
 </div>
